fixed: Development mongodb URL

--- a/src/.env
+++ b/src/.env
@@ -1,4 +1,4 @@
 MODE = development
 PORT = 8080
 PERSISTENCE = mongodb
-DB_URL = ""
+DEVELOPMENT_DB_URL = "mongodb+srv://santilapiana02:l1zQOiBqhw5OkCdm@development.gtzscic.mongodb.net/?retryWrites=true&w=majority"
